deployment/client.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: client
  name: client
spec:
  containers:
  - image: curlimages/curl
    name: client
    args:
    - -c
    - |
      while true; do curl http://my-node-app-service:3000 ; done
    command:
    - /bin/sh
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
