deployment/my-node-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: my-node-app
  name: my-node-app-service
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30000
  selector:
    app: my-node-app
  type: NodePort
status:
  loadBalancer: {}
