deployment/http-route.yaml
apiVersion: policy.linkerd.io/v1beta2
kind: HTTPRoute
metadata:
  name: my-node-app-route
  namespace: my-node-app
spec:
  parentRefs:
    - name: my-node-app-v1-service 
      kind: Service
      group: core
      port: 3000
  rules:
    - backendRefs:
      - name: my-node-app-v1-service
        port: 3000
        weight: 50
      - name: my-node-app-v2-service
        port: 3000
        weight: 50
